# USRP-Benchmark-System

./: .env  .env.example  .gitignore  Dummy  README.md  client.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup-daemons.sh  start-daemons.sh  start.sh  stop-daemons.sh  stop.sh  test_in.py  test_out.py
.github/workflows/: build-client.yml  build-server.yml
db/: init.sql
entrypoint/: database.py  main.py  requirements.txt
usrp_benchmark/: __init__.py  cli.py  client.py
usrp_testbed_library/: README.md  __init__.py  constants.py  generate_zc_signal.m  pyproject.toml  run_daemon.sh  rx_daemon.py  rx_sync_standalone.py  separate_usrp_transmission.py  simple_transmission.py  tx_daemon.py  tx_sync_standalone.py  usrp_common.py
worker/: Dockerfile  channel.py  database.py  models.py  requirements.txt  worker.py
